--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - "3000:3000"
     environment:
       - VITE_API_URL=${VITE_API_URL}
+    volume:
+      - ./Backend:/app
 
   frontend:
     build:
