--- a/github/workflows/ci-cd.yaml
+++ b/github/workflows/ci-cd.yaml
@@ -17,12 +17,12 @@ jobs:
         with:
           node-version: 20
 
-      - name: Install backend dependencies
+      - name: Install backend dependency
         run: |
           cd Backend
           npm install
 
-      - name: Install frontend dependencies
+      - name: Install frontend dependency
         run: |
           cd frontend
           npm install
