--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,4 +32,5 @@ jobs:
 
       - name:  Build and Run Docker Compose
         run: |
-          docker-compose up -d --build
+         docker compose up -d --build
+  
